<package>
 <name>ras_group8_transform</name>
  <version>0.1.0</version>
  <description>
    Transform package.
  </description>
  <license>BSD</license>

  <url type="website">https://github.com/RAS17-Group-8/ras_group8_transform</url>

  <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>phidgets</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>phidgets</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
